# frenchie

./: .gitignore  PORT_STATUS.md  README.md  planupdate.md  port-manifest.json  pyproject.toml
.frenchie/: state.json
claude_code_py/: cli.py  config.py  logger.py  messages.py  permissions.py  prompts.py  query.py  repl.py  themes.py  tui.py
claude_code_py/commands/: __init__.py  model.py  registry.py
claude_code_py/components/: __init__.py  auto_updater.py  companion.py  dialog.py  fuzzy_picker.py  markdown_renderer.py  plugin_system.py  progress.py  sandbox.py  skills_manager.py  status_bar.py  voice_mode.py
claude_code_py/mcp/: __init__.py  explorer.py  stdio.py
claude_code_py/services/: __init__.py  auth.py  bridge.py  claude_client.py  config_store.py  cost_tracker.py  memory_store.py  read_state.py  session_store.py  shell_task_store.py  state_store.py  task_store.py  team_store.py  web_server.py
claude_code_py/tests/: __init__.py  test_companion.py  test_dialog.py  test_fuzzy_picker.py  test_logger.py  test_plugin_system.py  test_progress.py  test_repl.py  test_sandbox.py  test_skills_manager.py  test_themes.py
claude_code_py/tools/: __init__.py  agent.py  builtins.py  config_tool.py  file_limits.py  filesystem.py  image_processor.py  mcp_resources.py  notebook.py  orchestrator.py  pdf.py  plan_mode.py  registry.py  search.py  (+8 more)
scratch/: bulk_update_manifest.py  test_dynamic_prompt.py  test_scroll_region.py
scripts/: build_manifest.py  manifest_stats.py  mark_port_status.py  smoke.py  test_cost_tracker.py  test_mcp_client.py  test_openai_client.py
(+3 files in other folders)
